--- a/src/scss/_content.scss
+++ b/src/scss/_content.scss
@@ -1,5 +1,5 @@
 .section__about{
-    background-image: url('../img/about__bg.png');
+    background-image: url('../img/about__bg.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
