--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -95,6 +95,30 @@ body {
 
 }
 
+.swiper-pagination7{
+    z-index: 999 !important;
+    position: relative !important;
+    bottom: -35px !important;
+    width: 100% !important;
+    left: 0 !important;  
+
+    display: flex;
+    justify-content:center !important;
+    
+    @media (max-width: $breakpoint1200) {
+        bottom: -25px !important;
+    }
+
+    @media (max-width: $breakpoint768) {
+        bottom: -25px !important;
+    }
+
+    @media (max-width: $breakpoint480) {
+        bottom: -25px !important;
+    }
+
+}
+
 .swiper-pagination-bullet{
     width: 15px !important;
     height: 15px !important;
